{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 26,
  "lineage": "a03d72a7-0f60-91ef-82df-a4213a98c09c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0088f17ca9e2525cf",
            "arn": "arn:aws:ec2:us-east-1:961424819621:elastic-ip/eipalloc-0088f17ca9e2525cf",
            "domain": "vpc",
            "id": "eipalloc-0088f17ca9e2525cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-209-208-114.compute-1.amazonaws.com",
            "public_ip": "44.209.208.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:internet-gateway/igw-021e1954d27f7f382",
            "id": "igw-021e1954d27f7f382",
            "owner_id": "961424819621",
            "tags": {
              "Name": "simply-served-igw"
            },
            "tags_all": {
              "Name": "simply-served-igw"
            },
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0088f17ca9e2525cf",
            "association_id": "eipassoc-0f3bd7956287b2d45",
            "connectivity_type": "public",
            "id": "nat-0b3624c632c3caf27",
            "network_interface_id": "eni-0eac87ae024cb7203",
            "private_ip": "10.0.1.139",
            "public_ip": "44.209.208.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-007c764ec71284d3f",
            "tags": {
              "Name": "simply-served-nat-gw"
            },
            "tags_all": {
              "Name": "simply-served-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:route-table/rtb-0f62c5d3c3814cc20",
            "id": "rtb-0f62c5d3c3814cc20",
            "owner_id": "961424819621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3624c632c3caf27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "simply-served-private-rt"
            },
            "tags_all": {
              "Name": "simply-served-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:route-table/rtb-0cece2120333d5f40",
            "id": "rtb-0cece2120333d5f40",
            "owner_id": "961424819621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021e1954d27f7f382",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "simply-served-public-rt"
            },
            "tags_all": {
              "Name": "simply-served-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a995dfdc91d73e",
            "route_table_id": "rtb-0f62c5d3c3814cc20",
            "subnet_id": "subnet-03bdc6c5d9662b161"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021e659b47eae9155",
            "route_table_id": "rtb-0cece2120333d5f40",
            "subnet_id": "subnet-007c764ec71284d3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:security-group/sg-05f93cf7fec4a29ac",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f93cf7fec4a29ac",
            "ingress": [],
            "name": "simply-served-lambda-sg",
            "name_prefix": "",
            "owner_id": "961424819621",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:subnet/subnet-03bdc6c5d9662b161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bdc6c5d9662b161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961424819621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simply-served-private-subnet"
            },
            "tags_all": {
              "Name": "simply-served-private-subnet"
            },
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:subnet/subnet-007c764ec71284d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007c764ec71284d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961424819621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simply-served-public-subnet"
            },
            "tags_all": {
              "Name": "simply-served-public-subnet"
            },
            "vpc_id": "vpc-0fdc085cdf90dc68f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961424819621:vpc/vpc-0fdc085cdf90dc68f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee40aa85efc3406f",
            "default_route_table_id": "rtb-04c37778717689206",
            "default_security_group_id": "sg-0d6d7df7674b8344f",
            "dhcp_options_id": "dopt-0d901170a8b4695a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdc085cdf90dc68f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c37778717689206",
            "owner_id": "961424819621",
            "tags": {
              "Name": "simply-served-vpc"
            },
            "tags_all": {
              "Name": "simply-served-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}